# consensus-sample

./: .gitignore  Cargo.toml  README.md  renovate.json
.github/workflows/: raft.yaml
proto/: Cargo.toml  build.rs
proto/src/: lib.rs  raftpb.proto
src/: config.rs  errors.rs  lib.rs  main.rs  node.rs  raft.rs  storage.rs  tracker.rs  util.rs
src/confchange/: changer.rs  mod.rs  restore.rs
src/quorum/: joint.rs  majority.rs  mod.rs
src/tracker/: progress.rs  state.rs
