[package]
name = "consensus-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.8.0"
anyhow = "1.0.72"
bytes = "1.5"
prost = "0.12"
rand = "0.8"
raftpb = { path = "proto", version = "0.1.0" }

[build-dependencies]
prost-build = "0.11"

[workspace]
members = ["proto"]

