[package]
name = "consensus-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7.0"
fxhash = "0.2.1"
slog-term = "2.9.1"
slog-async = "2.8.0"
anyhow = "1.0.82"
bytes = "1.6"
prost = "0.12"
rand = "0.8"
getset = "0.1.3"
raftpb = { path = "proto", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
prost-build = "0.12"

[workspace]
members = ["proto"]

